Time: 14 ms (57.18%), Space: 55.2 MB (62.15%) - LeetHub